# AutoSign

./: .gitignore  README.md  dev_script.py  finetune.py  main.py  playground.ipynb  pyproject.toml  requirements.txt  test_script.py  visualize.py
autosign/: config.py  data.py  model.py  processor.py
data/: dev.csv  train.csv
dev_evaluation/: dev.csv
examples/: IAMFineTune.ipynb
tests/: test_model.py  test_processor.py
utils/: datasetv2.py  discord.py  progressive_dataset.py  utils.py
